adding hte favicon

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce product page</title>
+    <link rel="shortcut icon" href="ecommerce-product-page-main/ecommerce-product-page-main/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
     <main class="container">
-        <header>
+        <header class="header">
             <div class="top-left">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/logo.svg" alt="">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-menu.svg" alt="">
-                <nav>
+                <nav class="hidden">
                     <ul>
                         <li><a href="#">Collections</a></li>
                           <li><a href="#">Men</a></li>
