--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="top-right">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-avatar.png" alt="">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-avatar.png" alt="" class="avatar-img">
             </div>
         </header>
 
