finalizing the css for small screens

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <main class="container">
         <header class="header">
             <div class="top-left">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-menu.svg" alt="" class="menu">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/logo.svg" alt="">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-menu.svg" alt="">
                 <nav class="hidden">
                     <ul>
                         <li><a href="#">Collections</a></li>
@@ -33,18 +33,18 @@
             <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="">
         </div>
           <div class="content">
-              <p class="description">Sneaker Company</p>
+              <p class="description">SNEAKER COMPANY</p>
              <h2>Fall Limited Edition Sneakers </h2>
-             <p>These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.
+             <p class="big-description">These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.
               </p>
               <div class="prices">
                   <span class="main-price">$125.00</span>
                   <span class="discount">50%</span>
                   <span class="last-price">$250.00</span>
               </div>
-              <div class="add-product"><img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-minus.svg" alt=""><span class="zero">0</span> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-plus.svg" alt=""></div>
+              <div class="add-product"><img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-minus.svg" alt="" class="minus"><span class="zero">0</span> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-plus.svg" alt="" class="plus"></div>
 
-              <button class="cart-button">Add to cart</button>
+             <button class="cart-button"> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="" id="cart-svg">Add to cart</button> 
           </div>
     </main>
 </body>
