adding the modal menu for small screens

--- a/index.html
+++ b/index.html
@@ -23,11 +23,25 @@
                     </ul>
                 </nav>
             </div>
+
             <div class="top-right">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-avatar.png" alt="" class="avatar-img">
             </div>
         </header>
+
+        <div class="menu-block hidden">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-close.svg" alt="" class="close-btn">
+            <nav class="">
+                <ul>
+                    <li><a href="#">Collections</a></li>
+                      <li><a href="#">Men</a></li>
+                      <li><a href="#">Women</a></li>
+                      <li><a href="#">About</a></li>
+                      <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
 
         <div class="images">
             <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="">
@@ -48,4 +62,5 @@
           </div>
     </main>
 </body>
+<script src="script.js"></script>
 </html>
