--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         </div>
 
         <div class="images">
-            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="" class="main-img">
+
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-next.svg" alt="">
         </div>
           <div class="content">
               <p class="description">SNEAKER COMPANY</p>
