adjusted the plus and minus quantity

--- a/index.html
+++ b/index.html
@@ -46,8 +46,10 @@
         <div class="images">
             <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="" class="main-img">
 
-            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="">
-            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-next.svg" alt="">
+           
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="" class="previous">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-next.svg" alt="" class="next">
+            
         </div>
           <div class="content">
               <p class="description">SNEAKER COMPANY</p>
