--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
             <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="" class="main-img">
 
            
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="" class="previous">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-next.svg" alt="" class="next">
+                <div class="buttons">
+                    <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="" class="previous">
+                    <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-next.svg" alt="" class="next">
+                </div>
             
         </div>
           <div class="content">
