--- a/index.html
+++ b/index.html
@@ -50,8 +50,22 @@
                 <div class="cart-section__body">
                   <p class="empty-msg">Your cart is empty.</p>
                   <ul class="cart-section__products"></ul>
-                  <button type="button" class="cart-section__btn-checkout hidden">Checkout</button>
                 </div>
+
+                <div class="cart-item-block hidden">
+                    <div class="top-item">
+                        <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="" width="50" />
+                          <p>Autumn Limited Edition...</p>
+                          <div class="cart-item-values" >
+                        
+                          <div class="values">
+                              <span>$125.00</span>
+                                     <span>x</span>  <span> $</span>
+                                        <span id="total-cart">$</span>
+                          </div>
+                          <svg version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g> <path fill="#231F20" d="M56,4H40c0-2.211-1.789-4-4-4h-8c-2.211,0-4,1.789-4,4H8C5.789,4,4,5.789,4,8v5c0,0.553,0.447,1,1,1h54 c0.553,0,1-0.447,1-1V8C60,5.789,58.211,4,56,4z"></path> <path fill="#231F20" d="M20,24c-0.553,0-1,0.447-1,1v26c0,0.553,0.447,1,1,1s1-0.447,1-1V25C21,24.447,20.553,24,20,24z"></path> <path fill="#231F20" d="M32,24c-0.553,0-1,0.447-1,1v26c0,0.553,0.447,1,1,1s1-0.447,1-1V25C33,24.447,32.553,24,32,24z"></path> <path fill="#231F20" d="M44,24c-0.553,0-1,0.447-1,1v26c0,0.553,0.447,1,1,1s1-0.447,1-1V25C45,24.447,44.553,24,44,24z"></path> <path fill="#231F20" d="M9,16H7v44c0,2.211,1.789,4,4,4h42c2.211,0,4-1.789,4-4V16h-2H9z M23,51c0,1.657-1.343,3-3,3s-3-1.343-3-3 V25c0-1.657,1.343-3,3-3s3,1.343,3,3V51z M35,51c0,1.657-1.343,3-3,3s-3-1.343-3-3V25c0-1.657,1.343-3,3-3s3,1.343,3,3V51z M47,51 c0,1.657-1.343,3-3,3s-3-1.343-3-3V25c0-1.657,1.343-3,3-3s3,1.343,3,3V51z"></path> </g> </g></svg></div>
+                    </div>
+                      <button type="button" class="cart-section__btn-checkout hidden">Checkout</button>
               </section>
         </div>
 
