--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
         <div class="carousel">
             <div class="images">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="" class="main-img">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-2.jpg" alt="" class="hidden main-image2">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-3.jpg" alt="" class="hidden main-image3">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-4.jpg" alt="" class="hidden main-image4">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-2.jpg" alt="" class="hidden2 main-image2">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-3.jpg" alt="" class="hidden2 main-image3">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-4.jpg" alt="" class="hidden2 main-image4">
             
                     <div class="buttons">
                         <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="" class="previous">
