adjusting the website

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
 
             <div class="top-right">
+                <span class="number hidden">a</span>
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="" id="cart">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-avatar.png" alt="" class="avatar-img">
             </div>
