adjusting the header

--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
         <header class="header">
             <div class="top-left">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-menu.svg" alt="" class="menu">
-                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/logo.svg" alt="">
+                <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/logo.svg" alt="" id="sneakers">
                 <nav class="hidden">
+                    <ul>
+                        <li><a href="#">Collections</a></li>
+                          <li><a href="#">Men</a></li>
+                          <li><a href="#">Women</a></li>
+                          <li><a href="#">About</a></li>
+                          <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <nav class="nav">
                     <ul>
                         <li><a href="#">Collections</a></li>
                           <li><a href="#">Men</a></li>
