adjusting some stuff

--- a/index.html
+++ b/index.html
@@ -99,13 +99,17 @@
              <p class="big-description">These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole, they’ll withstand everything the weather can offer.
               </p>
               <div class="prices">
-                  <span class="main-price">$125.00</span>
-                  <span class="discount">50%</span>
+                  <div class="t2">
+                      <span class="main-price">$125.00</span>
+                      <span class="discount">50%</span>
+                  </div>
                   <span class="last-price">$250.00</span>
               </div>
-              <div class="add-product"><img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-minus.svg" alt="" class="minus"><span class="zero">0</span> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-plus.svg" alt="" class="plus"></div>
-
-             <button class="cart-button"> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="" id="cart-svg">Add to cart</button> 
+              <div id="buttons">
+                  <div class="add-product"><img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-minus.svg" alt="" class="minus"><span class="zero">0</span> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-plus.svg" alt="" class="plus"></div>
+                  
+                               <button class="cart-button"> <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="" id="cart-svg">Add to cart</button>
+              </div>
           </div>
     </main>
 </body>
