--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="prices">
                   <div class="t2">
                       <span class="main-price">$125.00</span>
-                      <span class="discount">50%</span>
+                      <span class="discount" id="disc">50%</span>
                   </div>
                   <span class="last-price">$250.00</span>
               </div>
