trying to implement the header hr

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="" id="cart">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-avatar.png" alt="" class="avatar-img">
             </div>
+            <hr id="hrheader">
         </header>
 
         <main class="container">
