--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
                 </nav>
             </div>
 
-            <div class="top-right">
+            <div class="top-right" id="right">
                 <span class="number hidden">a</span>
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-cart.svg" alt="" id="cart">
                 <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-avatar.png" alt="" class="avatar-img">
             </div>
-            <hr id="hrheader">
+                
         </header>
-
+        <hr id="hrheader">
         <main class="container">
         <div class="menu-block hidden">
             <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-close.svg" alt="" class="close-btn">
