--- a/index.html
+++ b/index.html
@@ -91,8 +91,13 @@
                         <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-previous.svg" alt="" class="previous">
                         <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/icon-next.svg" alt="" class="next">
                     </div>
-            
             </div>
+            <div class="img-big">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-1.jpg" alt="">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-2.jpg" alt="">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-3.jpg" alt="">
+            <img src="ecommerce-product-page-main/ecommerce-product-page-main/images/image-product-4.jpg" alt="">
+        </div>
         </div>
           <div class="content">
               <p class="description">SNEAKER COMPANY</p>
